--- a/HealthyInteriors/HICheckListQuestionDetailViewController.xib
+++ b/HealthyInteriors/HICheckListQuestionDetailViewController.xib
@@ -41,8 +41,7 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{20, 52}, {283, 151}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="265189031"/>
+						<reference key="NSNextKeyView" ref="182129350"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -50,7 +49,7 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">Question</string>
-						<object class="NSColor" key="IBUITextColor" id="894636726">
+						<object class="NSColor" key="IBUITextColor" id="320346126">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MCAwIDAAA</bytes>
 							<string key="IBUIColorCocoaTouchKeyPath">darkTextColor</string>
@@ -75,7 +74,6 @@
 						<int key="NSvFlags">264</int>
 						<string key="NSFrame">{{39, 299}, {48, 48}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="638155521"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -114,7 +112,6 @@
 						<int key="NSvFlags">264</int>
 						<string key="NSFrame">{{137, 299}, {48, 48}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="701634657"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -140,7 +137,6 @@
 						<int key="NSvFlags">265</int>
 						<string key="NSFrame">{{228, 299}, {48, 48}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<int key="IBUIContentMode">4</int>
@@ -160,13 +156,12 @@
 						<reference key="IBUIFontDescription" ref="891094182"/>
 						<reference key="IBUIFont" ref="371959686"/>
 					</object>
-					<object class="IBUIButton" id="888702273">
+					<object class="IBUIButton" id="584928884">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{9, 11}, {44, 44}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="954845138"/>
+						<reference key="NSNextKeyView" ref="1038579798"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -185,12 +180,11 @@
 						<reference key="IBUIFontDescription" ref="891094182"/>
 						<reference key="IBUIFont" ref="371959686"/>
 					</object>
-					<object class="IBUIButton" id="265189031">
+					<object class="IBUIButton" id="182129350">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">289</int>
 						<string key="NSFrame">{{268, 11}, {44, 44}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="330027943"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -210,12 +204,11 @@
 						<reference key="IBUIFontDescription" ref="891094182"/>
 						<reference key="IBUIFont" ref="371959686"/>
 					</object>
-					<object class="IBUILabel" id="954845138">
+					<object class="IBUILabel" id="1038579798">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">290</int>
 						<string key="NSFrame">{{82, 21}, {156, 21}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="566574492"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -224,7 +217,7 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">Question</string>
-						<reference key="IBUITextColor" ref="894636726"/>
+						<reference key="IBUITextColor" ref="320346126"/>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUITextAlignment">1</int>
@@ -242,8 +235,7 @@
 				</array>
 				<string key="NSFrame">{{0, 64}, {320, 367}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="888702273"/>
+				<reference key="NSNextKeyView" ref="584928884"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
@@ -322,7 +314,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">labelQuestionTitle</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="954845138"/>
+						<reference key="destination" ref="1038579798"/>
 					</object>
 					<int key="connectionID">276</int>
 				</object>
@@ -330,7 +322,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">nextButton</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="265189031"/>
+						<reference key="destination" ref="182129350"/>
 					</object>
 					<int key="connectionID">279</int>
 				</object>
@@ -338,7 +330,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">prevButton</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="888702273"/>
+						<reference key="destination" ref="584928884"/>
 					</object>
 					<int key="connectionID">280</int>
 				</object>
@@ -369,6 +361,24 @@
 					</object>
 					<int key="connectionID">211</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">prevButtonPressed</string>
+						<reference key="source" ref="584928884"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">282</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">nextButtonPressed</string>
+						<reference key="source" ref="182129350"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">281</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -386,9 +396,9 @@
 							<reference ref="330027943"/>
 							<reference ref="638155521"/>
 							<reference ref="701634657"/>
-							<reference ref="888702273"/>
-							<reference ref="265189031"/>
-							<reference ref="954845138"/>
+							<reference ref="584928884"/>
+							<reference ref="182129350"/>
+							<reference ref="1038579798"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -429,17 +439,17 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">273</int>
-						<reference key="object" ref="888702273"/>
+						<reference key="object" ref="584928884"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">274</int>
-						<reference key="object" ref="265189031"/>
+						<reference key="object" ref="182129350"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">275</int>
-						<reference key="object" ref="954845138"/>
+						<reference key="object" ref="1038579798"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 				</array>
@@ -462,86 +472,9 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">280</int>
+			<int key="maxID">282</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">HICheckListQuestionDetailViewController</string>
-					<string key="superclassName">HIViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="CameraClicked">id</string>
-						<string key="MicrophoneClicked:">id</string>
-						<string key="NotesClicked">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="CameraClicked">
-							<string key="name">CameraClicked</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="MicrophoneClicked:">
-							<string key="name">MicrophoneClicked:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="NotesClicked">
-							<string key="name">NotesClicked</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="QuestionLabel">UILabel</string>
-						<string key="cameraButton">UIButton</string>
-						<string key="labelQuestionTitle">UILabel</string>
-						<string key="micButton">UIButton</string>
-						<string key="nextButton">UIButton</string>
-						<string key="notesButton">UIButton</string>
-						<string key="prevButton">UIButton</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="QuestionLabel">
-							<string key="name">QuestionLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cameraButton">
-							<string key="name">cameraButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="labelQuestionTitle">
-							<string key="name">labelQuestionTitle</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="micButton">
-							<string key="name">micButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="nextButton">
-							<string key="name">nextButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="notesButton">
-							<string key="name">notesButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="prevButton">
-							<string key="name">prevButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/HICheckListQuestionDetailViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">HIViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/HIViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
